[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "super-editor"
version = "1.0.0"
description = "Atomic file editor for AI agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = []

[project.scripts]
super-editor = "super_editor:main"

[tool.setuptools]
py-modules = ["super_editor"]
